[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "formseal-fetch"
version = "2.1.0"
description = "CLI tool for fetching encrypted form submissions"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "grayguava"}
]
dependencies = [
    "keyring>=25.0",
]

[project.scripts]
fsf = "cli.fsf:main"

[tool.setuptools]
packages = ["cli", "cli.commands", "cli.providers", "cli.providers.cloudflare", "cli.providers.cloudflare.storage", "cli.security"]